# IKT213_lindestad

./: .gitignore  README.md  pyproject.toml
assignment_1/: README.md  main.py
