[project]
dependencies = []
name = "ikt213"
requires-python = ">= 3.12"
version = "0.1.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
ikt213 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
opencv = ">=4.12.0,<5"
numpy = ">=2.3.2,<3"
