[project]
dependencies = []
name = "ikt213"
requires-python = ">= 3.12"
version = "0.1.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]


[tool.pixi.pypi-dependencies]
opencv-python = ">=4.12.0.88"

ikt213 = { path = ".", editable = true }
[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
