[project]
name = "ikt213"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = ["opencv-python>=4.12.0.88,<5", "numpy<2.3"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]


[tool.pixi.pypi-dependencies]
opencv-python = ">=4.12.0.88"

ikt213 = { path = ".", editable = true }
[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
